Assets/Msdk/Editor/Librarys/iOS3.2/MSDKAdapter_C11/MSDKAdapter_C11.framework/Headers/iOSConnector.h

    
    extern char* GetLoginRecord();
    extern void Login(int platform);
    extern int LoginOpt(int platform,int overtime);
    extern void WGQrCodeLogin(int platform);
    extern bool Logout();
    extern void SetPermission(int permissions);
    extern void SendToWeixin(
                                  char* title,
                                  char* desc,
                                  char* mediaTagName,
                                  Byte* thumbImgData,
                                  int thumbImgDataLen,
                                  char* messageExt
                                  );
    extern void SendToWeixinWithUrl(
                                         int scene,
                                         char* title,
                                         char* desc,
                                         char* url,
                                         char* mediaTagName,
                                         Byte* thumbImgData,
                                         int thumbImgDataLen,
                                         char* messageExt
                                         );
    extern void SendToWeixinWithPhoto(
                                                     int scene,
                                                     char *mediaTagName,
                                                     Byte *imgData,
                                                     int imgDataLen,
                                                     char *messageExt,
                                                     char *messageAction
                                                     );
    extern void SendToWXWithMiniApp(int scene,
                             unsigned char *title,
                             unsigned char *desc,
                             unsigned char *thumbImgData,
                             int thumbImgDataLen,
                             unsigned char *webpageUrl,
                             unsigned char *userName,
                             unsigned char *path,
                             bool withShareTicket,
                             unsigned char *messageExt,
                             unsigned char *messageAction);
    extern void SendToWeixinWithVideo(int scene,
                               unsigned char *title,
                               unsigned char *desc,
                               unsigned char *thumbUrl,
                               unsigned char *videoUrl,
                               unsigned char *ios_videoData,
                               int ios_videoDataLen,
                               unsigned char *mediaTagName,
                               unsigned char *messageAction,
                               unsigned char *messageExt);
    extern void FeedbackWithBody(char* body);
    extern void EnableCrashReport(bool bRDMEnable, bool bMTAEnable);
    extern void ReportEvent(char *name, char *eventList, bool isRealTime);
    extern char* GetVersion();
    extern char* GetChannelId();
    extern char* GetPlatformAPPVersion(int platform);
    extern char* GetRegisterChannelId();
    extern void RefreshWXToken();
    extern bool IsPlatformInstalled(int platformType);
    extern char* GetPfKey();
    extern void LogPlatformSDKVersion();
    extern bool QueryQQMyInfo();
    extern bool QueryQQGameFriendsInfo();
    extern bool QueryWXMyInfo();
    extern bool QueryWXGameFriendsInfo();
    extern void CreateWXGroup(
                         unsigned char* unionid,
                         unsigned char* chatRoomName,
                         unsigned char* chatRoomNickName
                         );
    extern void JoinWXGroup(
                       unsigned char* unionid,
                       unsigned char* chatRoomNickName
                       );
    extern void QueryWXGroupInfo(
                            unsigned char* unionID,
                            unsigned char* openIdLists
                            );
    extern void SendToWXGroup(
                         int msgType,
                         int subType,
                         unsigned char* unionID,
                         unsigned char* title,
                         unsigned char* desc,
                         unsigned char* messageExt,
                         unsigned char* mediaTagName,
                         unsigned char* imgUrl,
                         unsigned char* msdkExtInfo
                         );
    extern void OpenWeiXinDeeplink(unsigned char* link);
    extern bool SendToQQGameFriend(
                                                   int act,
                                                   char* fopenid,
                                                   char *title,
                                                   char *summary,
                                                   char *targetUrl,
                                                   char *imgUrl,
                                                   char* previewText,
                                                   char* gameTag,
                                                   char* msdkExtInfo
                                                   );
    extern bool SendToWXGameFriend(
                                                   char* fOpenId,
                                                   char* title,
                                                   char* description,
                                                   char* mediaId,
                                                   char* messageExt,
                                                   char* mediaTagName,
                                                   char* msdkExtInfo
                                                   );
    extern void LoginWithLocalInfo();
    extern void ShowNotice(char* scene);
    extern void HideScrollNotice();
    extern void OpenUrl(char* openUrl);
    extern void OpenUrlWithScreenDir(unsigned char * openUrl, int screenDir);
    extern char* GetEncodeUrl(unsigned char * openUrl);
    extern char* GetNoticeData(char* scene);
    extern void GetNearbyPersonInfo();
    extern bool CleanLocation();
    extern bool GetLocationInfo();
    extern bool SendMessageToWechatGameCenter(
                                                   char* fOpenid,
                                                   char* title,
                                                   char* content,
                                                   char* pTypeInfo,
                                                   char* pButtonInfo,
                                                   char* msdkExtInfo
                                                   );
    extern void SendToWeixinWithMusic(
                                           int scene,
                                           char* title,
                                           char* desc,
                                           char* musicUrl,
                                           char* musicDataUrl,
                                           char* mediaTagName,
                                           Byte* imgData,
                                           int imgDataLen,
                                           char* messageExt,
                                           char* messageAction
                                           );
    extern void SendToQQWithMusic(
                                       int scene,
                                       char* title,
                                       char* desc,
                                       char* musicUrl,
                                       char* musicDataUrl,
                                       char* imgUrl
                                       );
    extern bool SwitchUser(bool flag);
    extern void SendToQQ(
                              int scene,
                              char* title,
                              char* desc,
                              char* url,
                              Byte* imgData,
                              int imgDataLen
                              );
    extern void SendToQQWithPhoto(
                                       int scene,
                                       Byte* imgData,
                                       int imgDataLen
                                       );
    extern void SendToQQWithPhotoWithParams(
                           int scene,
                           Byte* imgData,
                           int imgDataLen,
                           const unsigned char *extraScene,
                           const unsigned char *messageExt
                           );
    extern char* GetPf();
    extern int GetPaytokenValidTime();
    extern void OpenMSDKLog(bool enabled);
    extern void BindQQGroup(
                                 char* cUnionid,
                                 char* cUnion_name,
                                 char* cZoneid,
                                 char* cSignature);
    extern void JoinQQGroup(unsigned char* cQQGroupNum, unsigned char* cQQGroupKey);
    extern void GetQQGroupCodeV2(unsigned char* guildId,unsigned char* zoneI);
    extern void QueryBindGuildV2(unsigned char *groupId, unsigned int type = 0);
    extern void GetQQGroupListV2();
    extern void RemindGuildLeaderV2(unsigned char * guildId,unsigned char * zoneId, unsigned char * roleId, unsigned char * roleName,
                                    unsigned char * partition,unsigned char * userZoneId, unsigned char * type, unsigned char * leaderOpenId,
                                    unsigned char * leaderRoleId, unsigned char * leaderZoneId,unsigned char* areaId);
    extern void BindExistQQGroupV2(unsigned char* groupId ,unsigned char* groupName,unsigned char* guildId,
                            unsigned char *zoneId,unsigned char *roleId);
    extern void AddGameFriendToQQ(
                                       char* cFopenid,
                                       char* cDesc,
                                       char* cMessage);
    extern char* GetGuestID();
    extern void ResetGuestID();
    extern void StartGameStatus(unsigned char* cGameStatus);
    extern void EndGameStatus(unsigned char* cGameStatus, int succ, int errorCode);
    extern long AddLocalNotification(char* localMessage);
    extern long AddLocalNotificationAtFront(char* localMessage);
    extern void ClearLocalNotification(char* localMessage);
    extern void ClearLocalNotifications();
    extern void SetPushTag(char* tag);
    extern void DeletePushTag(char* tag);
    extern void BuglyLog(int level, unsigned char* log);
    extern void RealNameAuth(char* authInfo);
    extern void QueryQQGroupKey(unsigned char* groupOpenId);
    extern void CreateQQGroupV2(unsigned char*guildId,unsigned char*guildName,unsigned char* zoneId,unsigned char* roleId,unsigned char* partition);
    extern void QueryQQGroupInfoV2(unsigned char* groupId);
    extern void JoinQQGroupV2(unsigned char* guildId, unsigned char* zoneId,unsigned char* groupId, unsigned char* roleId, unsigned char* partition);
    extern void UnbindQQGroupV2(unsigned char* guildId,unsigned char* guildName,unsigned char* zoneId);
    extern void UnbindWeiXinGroup(unsigned char* groupId);
    extern void QueryWXGroupStatus(unsigned char* groupId,int opType);
    extern void ShareToWXGameline(unsigned char* imgData,const int imgDataLen,unsigned char* gameExtra);
    extern void ReportUnityData(char *reportName, char *reportData);